--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
 <head>
+  <!-- include always this href
+  otherwise angular apps will not work -->
   <base href="/">
   <title>Ultimate Angular</title>
   <link rel="stylesheet" href="/css/app.css">
